Fixed panel overflow problem

--- a/app/assets/stylesheets/components/_paneling.css.sass
+++ b/app/assets/stylesheets/components/_paneling.css.sass
@@ -7,6 +7,7 @@
   .panel-expand
     position: absolute
     bottom: 0
+    left: 0
     width: 100%
     height: 50px
     +linear-gradient(rgba(#fff, 0), rgba(#fff, 1))
